--- a/submit.html
+++ b/submit.html
@@ -14,9 +14,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <!-- Custom styles for this template --> 
+      <link href="submit.css" rel="stylesheet">
     <link href="cover.css" rel="stylesheet">
-    <link rel="stylesheet" href="form.css" >
-    <script src="form.js"></script>
   </head>
 
   <body class="text-center">
@@ -33,37 +32,21 @@
         </div>
       </header>
 
-    <body >
-        <div class="container">
-            <div id="form-main">
-                <div id="form-div">
-                    <form class="montform" id="reused_form" >
-                        <p class="name">
-                            <input name="name" type="text" class="feedback-input" required placeholder="Name" id="name" />
-                        </p>
-                        <p class="email">
-                            <input name="email" type="email" required class="feedback-input" id="email" placeholder="Email" />
-                        </p>
-                        <p class="text">
-                            <textarea name="message" class="feedback-input" id="comment" placeholder="Message"></textarea>
-                        </p>
-                        <div class="submit">
-                            <button type="submit" class="button-blue">SUBMIT</button>
-                            <div class="ease"></div>
-                        </div>
-                    </form>
-                    <div id="error_message" style="width:100%; height:100%; display:none; ">
-                        <h4>
-                            Error
-                        </h4>
-                        Sorry there was an error sending your form. 
-                    </div>
-                    <div id="success_message" style="width:100%; height:100%; display:none; "> <h2>Success! Your Message was Sent Successfully.</h2> </div>
-                </div>
-            </div>
+        <div class= "contact-title">
+            <h1> What do you wish</h1>
+            <h2>you could tell your mother?</h2>
         </div>
-    </body>
-
+        <div class="contact-form">
+            <form id="contact-form" method="post" action="contact-form-handler.php">
+            <input name="name" type="text" class="form-control" placeholder="Your Name" required>
+                <br>
+            <input name="email" type="email" class="form-control" placeholder="Your Email" required> 
+                <br>
+            <textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea>
+                <br>
+            <input type="submit" class="form-control submit" value="SEND MESSAGE"> 
+            </form>
+        </div>
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
