--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">For our mothers.</h1>
-        <p class="lead">What do you wish you could tell your mother? <br> Mail to PO Box #23 By April 25, 2018</p>
+        <h1 class="cover-heading">What do you wish you could tell your mother?</h1>
+        <p class="lead"> <br>We are artists working on a project and need your help! <br> We are thinking about the different relationships (or lack there of) that we may have with our biological mothers. <br> How can you help?: Write us an intimate letter to your mom; what do you wish you could say to her? This will remain anonymous. <br> Thank you for your time!</p>
         <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+          <a href="submit.html" class="btn btn-lg btn-secondary" >Let's go!</a>
         </p>
       </main>
 
