--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
-        <div class="inner">
-          <h3 class="masthead-brand"> <img src="images/dearmom.png" alt="dearmom" style="width:200px"></h3>
+        <div class="inner"> 
+            <a href="index.html">
+   <h3 class="masthead-brand"> <img src="images/dearmom.png" alt="dearmom" style="width:200px"></h3>
+            </a>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="index.html">Home </a>
             <a class="nav-link" href="submit.html">Submit</a>
-            <a class="nav-link" href="#">About</a>
           </nav>
         </div>
       </header>
