--- a/submit.html
+++ b/submit.html
@@ -23,7 +23,9 @@
     <div class="cover-container d-flex w-100 h-50 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand"> <img src="images/dearmom.png" alt="dearmom" style="width:200px"></h3>
+            <a href="index.html">
+   <h3 class="masthead-brand"> <img src="images/dearmom.png" alt="dearmom" style="width:200px"></h3>
+            </a>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="index.html">Home </a>
             <a class="nav-link" href="submit.html">Submit</a>
